# giftos-core

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
docker/: Dockerfile
scripts/: setup.sh
src/giftos/: __init__.py  celery_app.py  config.py  database.py  main.py  schemas.py
src/giftos/analytics/: __init__.py  metrics.py
src/giftos/api/: __init__.py  routes.py
src/giftos/api/endpoints/: health.py  market.py  offers.py  portfolio.py  trades.py  webhooks.py
src/giftos/connectors/: __init__.py  noones.py
src/giftos/core/: __init__.py
src/giftos/core/tasks/: __init__.py  notifications.py  pricing.py  scraper.py
src/giftos/models/: __init__.py  gift_card.py  trade.py
src/giftos/portfolio/: __init__.py  engine.py
src/giftos/pricing/: __init__.py  engine.py
tests/: conftest.py  test_health.py  test_market.py  test_noones_connector.py  test_webhooks.py
